<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".MainActivity2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cre"
            android:textAlignment="center"
            android:textColor="@color/sena"
            android:textSize="34sp"
            android:textStyle="bold"
            android:layout_marginBottom="30sp"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@drawable/logo_sena"
            android:layout_marginBottom="70sp"
            />


        <EditText
            android:id="@+id/editTextText5"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/edt_nom"

            android:layout_marginBottom="10sp"
            android:inputType="text"
            android:rotationY="0" />

        <EditText
            android:id="@+id/editTextText6"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/edt_ape"

            android:layout_marginBottom="10sp"
            android:inputType="text"
            android:rotationY="0" />
        <EditText
            android:id="@+id/editTextText7"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/edt_email2"
            android:layout_marginBottom="10sp"

            />
        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="60sp"
            android:ems="10"
            android:hint="@string/edt_pass2"/>




        <Button
            android:id="@+id/button"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/sena"
            android:text="@string/btn_reg"

            android:textColorLink="@color/sena" />





</androidx.constraintlayout.widget.ConstraintLayout>