<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logn"
        android:textAlignment="center"
        android:textColor="@color/sena"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_marginBottom="30sp"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="173dp"
        app:srcCompat="@drawable/logo_sena"
        android:layout_marginBottom="30sp"
      />


    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/edt_email"


        android:inputType="text"
        android:rotationY="0" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30sp"
        android:ems="10"
        android:hint="@string/edt_pass"

        android:inputType="text"
        android:textAlignment="textStart" />

    <Button
        android:id="@+id/button"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/sena"
        android:text="@string/logn"

        android:textColorLink="@color/sena" />

    <Button
        android:id="@+id/button2"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#F10909"
        android:text="@string/btn_gmail"

        android:textColorLink="@color/sena" />

    <Button
        android:id="@+id/button3"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#0865D3"
        android:text="@string/btn_cuenta"

        android:textColorLink="@color/sena" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30sp"
        android:ems="10"
        android:hint="@string/edt_recu"

        android:inputType="text"
        android:textAlignment="center"
        android:textStyle="bold" />


</LinearLayout>

